Fix translation problems

--- a/client/dev/partials/_directives/form-edit-field.html
+++ b/client/dev/partials/_directives/form-edit-field.html
@@ -1,4 +1,4 @@
-<td acl-has-project-role="owner" acl-fallback="indicator.name">
+<td acl-has-project-role="owner" acl-fallback="indicator.name[language] || indicator.name">
 	<a ng-click="remove()" class="remove-action" ng-if="field.indicatorId">
 		<i class="fa fa-times" style="color: red"></i>
 	</a>
