Hide reporting analysis from menu while it's not fixed.

--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -63,16 +63,16 @@
 							<span translate="shared.reporting"></span>
 						</a>
 
-						<a ui-sref="main.project.reporting_analysis_list({projectId: project._id})" ui-sref-active="active" class="list-group-item">
+						<!-- <a ui-sref="main.project.reporting_analysis_list({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-lightbulb-o fa-fw"></i>
 							<span translate="shared.reporting_analysis"></span>
-						</a>
+						</a> -->
 					</div>
 
 					<div class="list-group" ng-if="!project._id">
 						<a class="list-group-item"><i class="fa fa-pencil fa-fw"></i> <span translate="project.inputs"></span></a>
 						<a class="list-group-item"><i class="fa fa-line-chart fa-fw"></i> <span translate="shared.reporting"></span></a>
-						<a class="list-group-item"><i class="fa fa-lightbulb-o fa-fw"></i> <span translate="shared.reporting_analysis"></span></a>
+						<!-- <a class="list-group-item"><i class="fa fa-lightbulb-o fa-fw"></i> <span translate="shared.reporting_analysis"></span></a> -->
 					</div>
 				</div>
 			</div>
