--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -18,8 +18,8 @@
 			<th style="width: 55px"></th>
 			<th><a ng-click="pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
 			<th><a ng-click="pred='themes';rev=!rev">{{'indicator.themes'|translate}}</a></th>
-			<th><a ng-click="pred='begin';rev=!rev">{{'shared.begin'|translate}}</a></th>
-			<th><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
+			<th style="width: 100px;"><a ng-click="pred='begin';rev=!rev">{{'shared.begin'|translate}}</a></th>
+			<th style="width: 100px;"><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
 		</tr>
 	</thead>
 	<tbody>
