Add missing form deletion from projects. Fix entity deletion from projects: inputs were not deleted at the same time.

--- a/client/dev/partials/projects/form-edit.html
+++ b/client/dev/partials/projects/form-edit.html
@@ -170,5 +170,10 @@
 			<i class="fa fa-undo"></i>
 			<span translate="shared.remove_changes"></span>
 		</button>
+
+		<button ng-click="delete()" ng-if="formIndex !== -1" class="btn btn-danger">
+			<i class="fa fa-times"></i>
+			<span translate="shared.delete"></span>
+		</button>
 	</div>
 </form>
