--- a/client/dev/partials/projects/input-list.html
+++ b/client/dev/partials/projects/input-list.html
@@ -1,7 +1,7 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li><a ui-sref="main.project.logical_frame({projectId: project._id})" ng-bind="::project.name"></a></li>
-	<li class="active" translate="project.waiting_inputs"></li>
+	<li class="active" translate="project.inputs"></li>
 </ol>
 
 <doc-reminder pages="project.presentation_project,project.inputs"></doc-reminder>
