Implement a directive to display indicators icons. Remove legacy template.

--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -43,25 +43,7 @@
 				   translate="shared.display"></a>
 			</span>
 
-			<i class="fa fa-ban fa-fw"
-				ng-if="indicator.operation == 'forbidden'"
-				tooltip="{{'indicator.is_forbidden'|translate}}"
-				tooltip-placement="right"></i>
-
-			<i class="fa fa-question fa-fw"
-				ng-if="indicator.operation == 'common'"
-				tooltip="{{'indicator.is_common'|translate}}"
-				tooltip-placement="right"></i>
-
-			<i class="fa fa-book fa-fw"
-				ng-if="indicator.operation == 'recommended'"
-				tooltip="{{'indicator.is_recommended'|translate}}"
-				tooltip-placement="right"></i>
-
-			<i class="fa fa-asterisk fa-fw"
-				ng-if="indicator.operation == 'mandatory'"
-				tooltip="{{'indicator.is_mandatory'|translate}}"
-				tooltip-placement="right"></i>
+			<indicator-icon operation="indicator.operation"></indicator-icon>
 
 			{{indicator.name[language]}}
 		</div>
