--- a/client/dev/partials/projects/logframe/indicator-select.html
+++ b/client/dev/partials/projects/logframe/indicator-select.html
@@ -16,20 +16,7 @@
 					translate="shared.choose"></a>
 			</span>
 
-			<i class="fa fa-question fa-fw"
-				ng-if="project.themes.indexOf(theme._id) !== -1 && indicator.operation == 'common'"
-				tooltip="{{'indicator.is_common'|translate}}"
-				tooltip-placement="right"></i>
-
-			<i class="fa fa-asterisk fa-fw"
-				ng-if="project.themes.indexOf(theme._id) !== -1 && indicator.operation == 'mandatory'"
-				tooltip="{{'indicator.is_mandatory'|translate}}"
-				tooltip-placement="right"></i>
-
-			<i class="fa fa-book fa-fw"
-				ng-if="project.themes.indexOf(theme._id) !== -1 && indicator.operation == 'recommended'"
-				tooltip="{{'indicator.is_recommended'|translate}}"
-				tooltip-placement="right"></i>
+			<indicator-icon ng-if="project.themes.indexOf(theme._id) !== -1" operation="indicator.operation"></indicator-icon>
 
 			<i class="fa fa-external-link fa-fw"
 				ng-if="project.themes.indexOf(theme._id) === -1"
