--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -11,14 +11,14 @@
 
 <div class="indicator-level-1" ng-repeat="theme in hierarchy|hierarchyFilter:searchField">
 	<div class="indicator-header" ng-click="theme.open=!theme.open">
-		<i class="fa" ng-class="{'fa-plus-circle':!theme.open,'fa-minus-circle':theme.open}"></i>
+		<i fa-open="theme.open"></i>
 		{{theme.name[language] || ('indicator.no_theme'|translate)}}
 		<span class="badge pull-right" ng-bind="theme.children.length"></span>
 	</div>
 
 	<div class="indicator-level-2" ng-repeat="type in theme.children" ng-if="theme.open">
 		<div class="indicator-header" ng-click="type.open=!type.open">
-			<i class="fa" ng-class="{'fa-plus-circle':!type.open,'fa-minus-circle':type.open}"></i>
+			<i fa-open="type.open"></i>
 			{{type.name[language] || ('indicator.no_type'|translate)}}
 			<span class="badge pull-right" ng-bind="type.children.length"></span>
 		</div>
