Move inlined template in a separate file

--- a/client/dev/partials/projects/logframe/indicator-select.html
+++ b/client/dev/partials/projects/logframe/indicator-select.html
@@ -1,33 +1,3 @@
-<script type="text/ng-template" id="indicator_tree.html">
-	<div class="indicator-level-2" ng-repeat="type in theme.children" ng-if="theme.open">
-		<div class="indicator-header" ng-click="type.open=!type.open">
-			<i fa-open="type.open"></i>
-			{{type.name[language] || ('indicator.no_type'|translate)}}
-			<span class="badge pull-right" ng-bind="type.children.length"></span>
-		</div>
-
-		<div class="indicator-level-3" ng-repeat="indicator in type.children" ng-if="type.open">
-			<span class="pull-right">
-				{{indicator.__usage}} <i class="fa fa-building-o"></i>
-
-				<a class="btn btn-xs btn-default"
-					ng-click="choose(indicator._id)"
-					ng-disabled="forbidden.indexOf(indicator._id) !== -1"
-					translate="shared.choose"></a>
-			</span>
-
-			<indicator-icon ng-if="project.themes.indexOf(theme._id) !== -1" operation="indicator.operation"></indicator-icon>
-
-			<i class="fa fa-external-link fa-fw"
-				ng-if="project.themes.indexOf(theme._id) === -1"
-				tooltip="{{'indicator.is_external'|translate}}"
-				tooltip-placement="right"></i>
-
-			{{indicator.name[language]}}
-		</div>
-	</div>
-</script>
-
 <div class="modal-body">
 	<div ng-if="missingIndicators.length">
 		<legend translate="project.missing_mandatory_indicators"></legend>
@@ -58,14 +28,14 @@
 				<span class="badge pull-right" ng-bind="theme.children.length"></span>
 			</div>
 
-			<div ng-include="'indicator_tree.html'"></div>
+			<div ng-include="'partials/projects/logframe/indicator-select-tree.html'"></div>
 		</div>
 	</div>
 
 	<div ng-if="!showAllIndicators">
 		<div ng-if="project.themes.length == 1">
 			<div style="margin-left: -20px"
-				ng-include="'indicator_tree.html'"
+				ng-include="'partials/projects/logframe/indicator-select-tree.html'"
 				ng-repeat="theme in hierarchy|hierarchyFilter:searchField"
 				ng-if="theme._id === project.themes[0]"
  				ng-init="theme.open = true"></div>
@@ -79,7 +49,7 @@
 					<span class="badge pull-right" ng-bind="theme.children.length"></span>
 				</div>
 
-				<div ng-include="'indicator_tree.html'"></div>
+				<div ng-include="'partials/projects/logframe/indicator-select-tree.html'"></div>
 			</div>
 		</div>
 	</div>
