--- a/client/dev/partials/indicators/edit-formula.html
+++ b/client/dev/partials/indicators/edit-formula.html
@@ -1,17 +1,11 @@
 
 <ng-form name="formulaForm">
-	<table class="table table-bordered table-condensed"
-		   style="border-width: 0 0 0 5px;"
-		   ng-style="{'border-color': formulaForm.$invalid ? 'darkred' : '#ddd'}">
+	<table class="table table-bordered table-condensed formula" ng-class="{error: formulaForm.$invalid}">
 		<tr>
 			<td style="width: 250px" translate="indicator.formula"></td>
 			<td acl-has-role="indicator" acl-fallback="formula.expression">
 				<div class="input-group">
-					<input type="text"
-						   class="form-control"
-						   ng-model="formula.expression"
-						   expression
-						   placeholder="{{'indicator.formula_expression_ph'|translate}}" />
+					<input type="text" class="form-control" ng-model="formula.expression" expression placeholder="{{'indicator.formula_expression_ph'|translate}}" />
 
 					<span class="input-group-btn">
 						<button class="btn btn-danger" ng-click="delete()" translate="shared.remove"></button>
@@ -26,28 +20,6 @@
 					<label class="col-sm-2 control-label" translate="shared.name"></label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" ng-model="parameter.name" required placeholder="" />
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label class="col-sm-2 control-label" translate="indicator.geo_aggregation"></label>
-					<div class="col-sm-10">
-						<select class="form-control" ng-model="parameter.geoAggregation">
-							<option value="sum" translate="indicator.geo_aggregation_sum"></option>
-							<option value="average" translate="indicator.geo_aggregation_average"></option>
-							<option value="none" translate="indicator.geo_aggregation_none"></option>
-						</select>
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label class="col-sm-2 control-label" translate="indicator.time_aggregation"></label>
-					<div class="col-sm-10">
-						<select class="form-control" ng-model="parameter.timeAggregation">
-							<option value="sum" translate="indicator.time_aggregation_sum"></option>
-							<option value="average" translate="indicator.time_aggregation_average"></option>
-							<option value="none" translate="indicator.time_aggregation_none"></option>
-						</select>									
 					</div>
 				</div>
 			</td>
