--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -81,39 +81,27 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>
-						<i class="fa fa-question-circle" tooltip-placement="right" tooltip="{{'indicator.name_ph'|translate}}">
-						{{'shared.name'|translate}}
-					</td>
+					<td translate="shared.name"></td>
 					<td ng-repeat="(code, language) in languages">
-						<textarea style="display: block; width: 100%; height: 100%" ng-model="indicator.name[code]"></textarea>
+						<textarea class="form-control" required ng-model="indicator.name[code]" placeholder="{{translations[code].indicator.name_ph}}"></textarea>
 					</td>
 				</tr>
 				<tr>
-					<td>
-						<i class="fa fa-question-circle" tooltip-placement="right" tooltip="{{'indicator.standard_ph'|translate}}">
-						{{'indicator.standard'|translate}}
-					</td>
+					<td translate="indicator.standard"></td>
 					<td ng-repeat="(code, language) in languages">
-						<textarea style="display: block; width: 100%; height: 100%" ng-model="indicator.standard[code]"></textarea>
+						<textarea class="form-control" ng-model="indicator.standard[code]" placeholder="{{translations[code].indicator.standard_ph}}"></textarea>
 					</td>
 				</tr>
 				<tr>
-					<td>
-						<i class="fa fa-question-circle" tooltip-placement="right" tooltip="{{'indicator.sources_ph'|translate}}">
-						{{'indicator.sources'|translate}}
-					</td>
+					<td translate="indicator.sources"></td>
 					<td ng-repeat="(code, language) in languages">
-						<textarea style="display: block; width: 100%; height: 100%" ng-model="indicator.sources[code]"></textarea>
+						<textarea class="form-control" ng-model="indicator.sources[code]" placeholder="{{translations[code].indicator.sources_ph}}"></textarea>
 					</td>
 				</tr>
 				<tr>
-					<td>
-						<i class="fa fa-question-circle" tooltip-placement="right" tooltip="{{'indicator.comments_ph'|translate}}">
-						{{'indicator.comments'|translate}}
-					</td>
+					<td translate="indicator.comments"></td>
 					<td ng-repeat="(code, language) in languages">
-						<textarea style="display: block; width: 100%; height: 100%" ng-model="indicator.comments[code]"></textarea>
+						<textarea class="form-control" ng-model="indicator.comments[code]" placeholder="{{translations[code].indicator.comments_ph}}"></textarea>
 					</td>
 				</tr>
 			</tbody>
@@ -122,30 +110,26 @@
 	</fieldset>
 
 	<fieldset>
-		<legend translate="indicator.computation"></legend>
+		<legend translate="indicator.formulas"></legend>
 
-		<div class="form-group">
-			<label for="name" class="col-sm-2 control-label" translate="indicator.formulas"></label>
-			<div class="col-sm-10">
-				<div formula="formula" id="formulaId" ng-repeat="(formulaId, formula) in indicator.formulas"></div>
+		<div formula="formula" id="formulaId" ng-repeat="(formulaId, formula) in indicator.formulas"></div>
 
-				<button class="btn btn-default" ng-click="addFormula()" acl-has-role="indicator">
-					<i class="fa fa-plus"></i>
-					<span translate="indicator.add_formula"></span>
-				</button>
-			</div>
-		</div>
+		<a class="btn btn-default" ng-click="addFormula()" acl-has-role="indicator">
+			<i class="fa fa-plus"></i>
+			<span translate="indicator.add_formula"></span>
+		</a>
+
 	</fieldset>
 
 	<div class="pull-right" acl-has-role="indicator">
-		<button class="btn btn-primary" ng-disabled="indicatorForm.$invalid || isUnchanged()" ng-click="save()">
+		<a class="btn btn-primary" ng-disabled="indicatorForm.$invalid || isUnchanged()" ng-click="save()">
 			<i class="fa fa-floppy-o"></i>
 			<span translate="shared.save"></span>
-		</button>
+		</a>
 
-		<button class="btn btn-default" ng-disabled="isUnchanged()" ng-click="reset()">
+		<a class="btn btn-default" ng-disabled="isUnchanged()" ng-click="reset()">
 			<i class="fa fa-undo"></i>
 			<span translate="shared.remove_changes"></span>
-		</button>
+		</a>
 	</div>
 </form>
