--- a/client/dev/partials/projects/planning/edit-field.html
+++ b/client/dev/partials/projects/planning/edit-field.html
@@ -1,8 +1,8 @@
-<td acl-has-project-role="owner" acl-fallback="indicator.name[language] || indicator.name">
+<td acl-has-project-role="owner" acl-fallback="indicator.name[language] || indicator[language]">
 	<a ng-click="remove()" class="remove-action" ng-if="field.indicatorId">
 		<i class="fa fa-times" style="color: red"></i>
 	</a>
-	{{indicator.name[language] || indicator.name}}
+	{{indicator.name[language] || indicator[language]}}
 </td>
 <td acl-has-project-role="owner">
 	<select
